test-cases/invalid/identifier_with_special_chars.ul
 // This actually does compile, but it won't be tested
 // because it is due to an antlr configuration issue.
 void main() {
    int id$;
}